package example;
import "message.proto";

option java_package = "com.github.herong.rpc.netty.protobuf.demo3";
option java_outer_classname = "Response";

message LoginResponse {
    extend Command {
        required LoginResponse cmd = 103;
    }
    optional int32 code = 1;
    optional string reason = 2;
}


